gateway-injection/resources/fake-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fake-gw
spec:
  selector:
    matchLabels:
      ingress: fake-gw
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
        inject.istio.io/templates: gateway        
      labels:
        ingress: fake-gw
    spec:
      containers:
      - name: istio-proxy
        image: auto 
---
apiVersion: v1
kind: Service
metadata:
  name: fake-gw
spec:
  type: LoadBalancer
  selector:
    ingress: fake-gw
  ports:
  - port: 80
    name: http
  - port: 443
    name: https
