gateway-injection/resources/demo-gw-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: demo-gateway
spec:
  selector:
    # Note this must match the NS specific gateway
    ingress: demo-gw
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "httpbin.solo.io"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo-gateway-vs
spec:
  exportTo:
  - "."
  hosts:
  - "httpbin.solo.io"
  gateways:
  - demo-gateway
  http:
  - route:
    - destination:
        host: httpbin
        port:
          number: 8000
