gateway-injection/resources/fake-gw-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: fake-gateway
spec:
  selector:
    # Note this must match the NS specific gateway
    ingress: fake-gw
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "fakeservice.solo.io"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fake-gateway-vs
spec:
  exportTo:
  - "."
  hosts:
  - "fakeservice.solo.io"
  gateways:
  - fake-gateway
  http:
  - route:
    - destination:
        host: fakeservice
        port:
          number: 80
